Update health indicator registry and refactor service load metric calculation